--- a/academic-blocks-css.css
+++ b/academic-blocks-css.css
@@ -1,21 +1,34 @@
-.info-page-acd .block-list-adc ul {
-    list-style-type: none;
-    margin: 2px;
-    padding: 0;
-    width: 200px;
-    background-color: #f1f1f1;
-  }
-  
-  .info-page-acd .block-list-adc  li a {
-    display: block;
-    color: #000;
-    padding: 8px 16px;
-    text-decoration: none;
-    margin: 2px;
-  }
-  
-  /* Change the link color on hover */
-  .info-page-acd .block-list-adc  li a:hover {
-    background-color: #555;
-    color: white;
-  }
+.block-list-adc ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  width: 300px;
+  background-color: #f1f1f1;
+  float: left;
+}
+.block-list-adc li a {
+  display: block;
+  color: #000;
+  padding: 8px 1px;
+  text-decoration: none;
+  text-align: left;
+
+}
+
+.info-page-acd
+{
+  text-align: center;
+  margin: 20px 0;
+  width: 100%;
+  min-width:1000px;
+}
+
+/* Change the link color on hover */
+.block-list-adc li a:hover {
+  background-color: #fad390;
+  color: #fff;
+  text-align: center;
+}
+.block-list-adc .icon {
+  margin-right: 1px;
+}
