--- a/style.css
+++ b/style.css
@@ -156,7 +156,7 @@ ul {
   .info-page-acd
 {
     text-align: center;
-    margin: 20px 0;
+    margin: 10px 0;
 }
 
 .info-page-acd ul {
@@ -179,4 +179,24 @@ ul {
   margin: 0 142.6px;
   text-align: center;
   
+}
+/* Back to top button */
+#myBtn {
+  display: none;
+  position: fixed;
+  bottom: 20px;
+  right: 30px;
+  z-index: 99;
+  font-size: 18px;
+  border: none;
+  outline: none;
+  background-color: red;
+  color: white;
+  cursor: pointer;
+  padding: 15px;
+  border-radius: 4px;
+}
+
+#myBtn:hover {
+  background-color: #555;
 }
